--- a/Nithin2003/Properties/launchSettings.json
+++ b/Nithin2003/Properties/launchSettings.json
@@ -9,10 +9,10 @@
   },
   "profiles": {
     "Nithin2003": {
-      "commandName": "Project", 
+      "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://praveen;http://localhost:5218",
+      "applicationUrl": "https://localhost:7245;http://localhost:5218",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
