Commit All Changes

--- a/Nithin2003/appsettings.json
+++ b/Nithin2003/appsettings.json
@@ -7,6 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection":"Server=DESKTOP-RGII4NJ\\SQLEXPRESS02;Database=MyWebApplication; Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-RGII4NJ\\SQLEXPRESS02;Database=MyWebApplication; Trusted_Connection=True;TrustServerCertificate=True;"
   }
+  //"Smtp": {
+  //  "Server": "testing7702738@gmail.com",
+  //  "Port": 587,
+
+  //  "FromAddress": "testing7702738@gmail.com",
+  //  "UserName": "testing7702738@gmail.com",
+  //  "Password": "7702738161Nithin"
+  //}
 }
