--- a/Nithin2003/appsettings.json
+++ b/Nithin2003/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-RGII4NJ\\SQLEXPRESS02;Database=MyWebApplication; Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-GOVJS9U\\SQLEXPRESS;Database=MyWebApplication; Trusted_Connection=True;TrustServerCertificate=True;"
   }
   
 }
