--- a/Nithin2003/Properties/launchSettings.json
+++ b/Nithin2003/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7245;http://localhost:5218",
+      "applicationUrl": "http://localhost:7245;http://localhost:5218",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
