--- a/Nithin2003/appsettings.json
+++ b/Nithin2003/appsettings.json
@@ -8,8 +8,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db9587.databaseasp.net; Database=db9587; User Id=db9587; Password=9r@FM?8ky7E_; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=DESKTOP-GOVJS9U\\SQLEXPRESS;Database=MyWebApplication; Trusted_Connection=True;TrustServerCertificate=True;"
   }
 
 }
-
+//},
+//  "AllowedHosts": "*",
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Server=db9587.databaseasp.net; Database=db9587; User Id=db9587; Password=9r@FM?8ky7E_; Encrypt=False; MultipleActiveResultSets=True;"
+//  }
