Added Content Editor

--- a/Nithin2003/appsettings.json
+++ b/Nithin2003/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-GOVJS9U\\SQLEXPRESS;Database=MyWebApplication;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-GOVJS9U\\SQLEXPRESS;Database=MyWebApplication;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=db9587.public.databaseasp.net; Database=db9587; User Id=db9587; Password=9r@FM?8ky7E_; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 
 }
