Recent functionality changes

--- a/Nithin2003/Nithin2003.csproj
+++ b/Nithin2003/Nithin2003.csproj
@@ -23,4 +23,11 @@
     <Folder Include="wwwroot\DbBackup\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Shared\_Admin.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
