--- a/Nithin2003/Properties/launchSettings.json
+++ b/Nithin2003/Properties/launchSettings.json
@@ -14,14 +14,14 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:7245;http://localhost:5218",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
